--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/CustomerCare/appsettings.json
+/CustomerCare/appsettings.Development.json
+/CustomerCare/appsettings.json
+/CustomerCare/appsettings.Development.json
